# ezbatch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: main.yml  publish-to-pypi.yml
docs/: architecture.md  conf.py  index.md
docs/api-reference/: index.md  s3.md  workflow.md
docs/cli/: index.md
docs/tutorials/: data-processing.md  index.md  ml-training.md  multi-stage-pipeline.md  parameter-sweep.md  simple-job.md
docs/user-guide/: 01-getting-started.md  02-workflows.md  03-advanced-usage.md  04-configuration.md  05-troubleshooting.md  index.md
ezbatch/: client.py  compute_environment.py  conf.py  defaults.py  initialization.py  job.py  job_definition.py  job_queue.py  logs.py  s3.py  workflow.py
ezbatch/interactive/: manager.py  manager.tcss
ezbatch/preload_scripts/: __init__.py  preload.sh
ezbatch/scripts/: cli.py
tests/: conftest.py  test_cli.py  test_client.py  test_compute_environment.py  test_conf.py  test_defaults.py  test_interactive_manager.py  test_job_definition.py  test_job_queue.py  test_logs.py  test_preload_scripts.py  test_s3.py  test_workflow.json  test_workflow.py
