[project]
name = "ezbatch"
description = "A Python Library for Simplified AWS Batch"
authors = [{ name = "Andrew Van", email = "vanandrew77@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "boto3",
    "dataclasses-json",
    "pandas",
    "tabulate",
    "toml",
]

[project.scripts]
ezbatch-cli = "ezbatch.scripts.cli:ezbatch_cli"

[project.optional-dependencies]
dev = [
    "boto3-stubs[essential,batch,iam]",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.setuptools_scm]
version_file = "ezbatch/_version.py"

[tool.isort]
profile = "black"
